avformat/utils: Look at the first 3 frames if timestamps indicate frame reorder but decoder delay does not

Fixes: Ticket6487

Signed-off-by: Michael Niedermayer <michael@niedermayer.cc>